#============================================================================#
# This file is part of the GiMPy graph library                               #
#                                                                            #
# GiMPy is distributed under the Eclipse Public License as part of the       #
# COIN-OR repository (http://www.coin-or.org).                               #
#                                                                            #
# Authors: Ayukut Bulut, Lehigh University (ayb211@lehigh.edu)               #
#          Ted Ralphs, Lehigh University (ted@lehigh.edu)                    #
#                                                                            #
#                                                                            #
# Copyright (C) 2013, Lehigh University, Aykut Bulut, and Ted Ralphs         #
# All Rights Reserved.                                                       #
#============================================================================#

## $Id: $

########################################################################
#                               GiMPy                                  #
########################################################################

GIMPYdir = $(pythondir)/gimpy

GIMPY_PYTHON = __init__.py graph.py global_constants.py tree.py
